feat: Added solution for exercise 2.02

--- a/2.01-compose-textlog-volume/docker-compose.yml
+++ b/2.01-compose-textlog-volume/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.8'
 
 # run this docker compose with touch ./text.log && docker compose up
+# Finish with 
+# docker compose down
 services:
 
   simple-web-service:
