--- a/2.02-simple-web-service-expose/docker-compose.yml
+++ b/2.02-simple-web-service-expose/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 
-# run this docker compose with
-# $ docker compose up
-# You can check with 
-# $ curl localhost:8090 
-# {"message":"You connected to the following path: /","path":"/"}%
-# Finish with 
-# $ docker compose down
+# # run this docker compose with
+# docker compose up
+# # You can check with 
+# curl localhost:8090 
+# # Must see something like {"message":"You connected to the following path: /","path":"/"}%
+# # Finish with 
+# docker compose down
 services:
 
   simple-web-service:
