--- a/2.04-redis/docker-compose.yml
+++ b/2.04-redis/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 ## run this docker compose with
 # $ docker compose up
-## You can check with 
-# $ curl localhost:8090 
-# {"message":"You connected to the following path: /","path":"/"}%
+## Open browser in localhost:5000
 ## Finish with 
 # docker compose down
 services:
