--- a/2.03-backend-frontend/docker-compose.yml
+++ b/2.03-backend-frontend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 ## run this docker compose with
-# $ docker compose up
+# $ docker compose up --build
 ## Open browser in localhost:5000
 ## Finish with 
 # docker compose down
