--- a/2.08-front-back-ngingx/docker-compose.yml
+++ b/2.08-front-back-ngingx/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 ## run this docker compose with
-# $ docker compose up
+# $ docker compose up --build
 ## Open browser in localhost:5000
 ## Finish with 
 # docker compose down
@@ -21,10 +21,8 @@ services:
 
   backend:
     build: ../1.13-example-backend
-    ports:
-      - 8080:8080
     environment:
-      - REQUEST_ORIGIN=http://localhost:5000
+      - REQUEST_ORIGIN=http://localhost
       - REDIS_HOST=redis
       - POSTGRES_HOST=db
       - POSTGRES_USER=postgres
@@ -34,10 +32,18 @@ services:
       - db
 
   frontend:
-    build: ../1.12-hello-frontend  
-    ports:
-      - 5000:5000
+    build: 
+      context: ../1.12-hello-frontend
+      args:
+        - REACT_APP_BACKEND_URL=http://localhost/api
     depends_on:
       - db
       - backend
-      - redis 
+      - redis
+
+  nginx:
+    image: nginx:1.26-alpine3.19
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
