--- a/2.09-front-back-ngingx-working/docker-compose.yml
+++ b/2.09-front-back-ngingx-working/docker-compose.yml
@@ -1,8 +1,21 @@
 version: '3.8'
 
+
+# There are no changes in the original Dockerfile, although I have included them in the folder by following the instructions.
+# The only thing that changes is in the docker-compose, for the ‘frontend:’ entry, I had to pass a new parameter to the ‘build’ of the Dockerfile so that the url to call the api is /api/ . 
+# I have achieved this by extending the ‘build’ tag:
+# build: 
+#       context: ./1.12-hello-frontend
+#       args:
+#         - REACT_APP_BACKEND_URL=http://localhost/api
+#
+# In the frontend dockerfile was ARG REACT_APP_BACKEND_URL with the default option, but when I pass this argument and build again this variable is overwritten.
+#
+# Finally I ran docker compose up --build to force the build.
+
 ## run this docker compose with
 # $ docker compose up --build
-## Open browser in localhost:5000
+## Open browser in localhost
 ## Finish with 
 # docker compose down
 services:
