feat: Add solution for exercise 3.06

--- a/3.06-optimize-image-size/frontend/Dockerfile
+++ b/3.06-optimize-image-size/frontend/Dockerfile
@@ -15,12 +15,14 @@ RUN npm install -g serve@14.2.3 \
 
 # Build the project
 ARG REACT_APP_BACKEND_URL=http://localhost:8080
-RUN npm run build
+RUN npm run build && cp -a build /usr/local/bin && rm -rf /usr/src/app
 
 # Switch to non-root user
 # Image have is own non-root-user: node, which is 1000
 # Be sure host has user with UID 1000
 USER node
+
+WORKDIR /usr/local/bin
 
 # Run
 CMD ["serve", "-s", "-l", "5000", "build"]
